# fastcnn

./: CMakeLists.txt  README.md  data.h  main.cpp  matrix.cpp  matrix.h
